--- a/index (1).html
+++ b/index (1).html
@@ -12,8 +12,8 @@
   <title>Titulo da pagina</title>
 </head>
 <body>
-  <h1>Manchete</h1>
-  <p>Descricao</p>
+  <h1>Clubes de Ciência SOR</h1>
+  <p>Clube Horta</p>
 </body>
 </html>
     <img src="nomedoarquivo.jpeg" alt="Trote: descricao da imagem" width="600" height="400">
